<resources>
    <string name="app_name">Abb-tasks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="info_text">Chocolate is the best delicious desert type and ingredient in the world. And also you can pick and order your favour one in one touch.\nBon Appetit</string>
    <string name="info_text2">Chocolate has been prepared as a drink for nearly all of its history. For example, one vessel found at an Olmec archaeological site on the Gulf Coast of Veracruz, </string>
    <string name="info_text3">Mexico, dates chocolate\'s preparation by pre-Olmec peoples as early as 1750 BC. On the Pacific coast of Chiapas, Mexico, a Mokaya archaeological site provides evidence of cocoa beverages dating even earlier to 1900 BC</string>
    <string name="greeting_text">Welcome, Natiq</string>
    <string name="address_text">Enter address</string>
    <string name="mobile_phone_text">Enter mobile phone</string>
    <string name="submit_text">Submit</string>
    <string name="change_current_name_text">Change current name :</string>
    <string name="change_current_password_text">Change current password</string>
    <string name="sign_out_text">Sign out</string>
</resources>