<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ProfileActivity"
    android:background="@color/extra_light_brown"
    >

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/cocoaPurpleBlack"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/user_profile_icon"
        app:tint="@color/extra_light_brown"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/titleNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="20dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/change_current_name_text"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/userNameText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/input_background"
        android:backgroundTint="@color/white"
        android:layout_marginTop="10dp"
        android:hint="Natiq"
        android:paddingStart="20dp"
        android:textStyle="bold"
        android:textColor="@color/cocoaPurpleBlack"
        android:textColorHint="@color/cocoaPurpleBlack"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/titleNameText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <TextView
        android:id="@+id/titlePasswordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/change_current_password_text"
        app:layout_constraintTop_toBottomOf="@id/userNameText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/userPasswordText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/input_background"
        android:backgroundTint="@color/white"
        android:layout_marginTop="10dp"
        android:hint="********"
        android:paddingStart="20dp"
        android:textStyle="bold"
        android:textColor="@color/cocoaPurpleBlack"
        android:textColorHint="@color/cocoaPurpleBlack"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/titlePasswordText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submitChangesButton"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:textAllCaps="false"
        android:text="@string/submit_text"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/extra_light_brown"
        android:background="@drawable/button_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userPasswordText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signOutButton"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:textAllCaps="false"
        android:text="@string/sign_out_text"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/extra_light_brown"
        android:background="@drawable/button_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/submitChangesButton" />


</androidx.constraintlayout.widget.ConstraintLayout>