<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.SaleFragment">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="fitEnd"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/imageCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="5dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        
        <ImageView
            android:id="@+id/chocolateImageText"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/bitter_chocolate_png"
            />
        
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/chocolateNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Bitter sweet chocolate"
        android:layout_marginTop="90dp"
        android:layout_marginHorizontal="20dp"
        android:textSize="25sp"
        android:textColor="@color/extra_light_brown"
        android:fontFamily="@font/lobster"
        app:layout_constraintTop_toBottomOf="@id/imageCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userAddressTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chocolateNameText">

        <EditText
            android:id="@+id/userAddressText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/input_background"
            android:hint="@string/address_text"
            android:textColorHint="@color/black"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="20dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userPhoneTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userAddressTextInputLayout">

        <EditText
            android:id="@+id/userPhoneText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/input_background"
            android:textColorHint="@color/black"
            android:hint="@string/mobile_phone_text"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:paddingStart="20dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submitCartButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:background="@drawable/button_background"
        android:text="@string/submit_text"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userPhoneTextInputLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>